kubernetes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-test

spec:
  selector:
    app: devops-test

  ports:
    - name: http
      port: 80
      nodePort: 30000

  type: NodePort
